--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Niobi Main Site">
-    <meta name="author" content="Fresco Development Team">
+    <meta name="author" content="Fresco Development">
 
     <title>Niobi</title>
 
